[gd_scene load_steps=34 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/Idle/idle_01.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/Idle/idle_02.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/Idle/idle_03.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/Idle/idle_04.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/Idle/idle_05.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/Idle/idle_06.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/Idle/idle_07.png" type="Texture" id=8]
[ext_resource path="res://assets/Player/Idle/idle_08.png" type="Texture" id=9]
[ext_resource path="res://assets/Player/Idle/idle_09.png" type="Texture" id=10]
[ext_resource path="res://assets/Player/Idle/idle_10.png" type="Texture" id=11]
[ext_resource path="res://assets/Player/Idle/idle_11.png" type="Texture" id=12]
[ext_resource path="res://assets/Player/Idle/idle_12.png" type="Texture" id=13]
[ext_resource path="res://assets/Player/Jump/landing outline.png" type="Texture" id=14]
[ext_resource path="res://assets/Player/Run/frame_0_delay-0.1s.png" type="Texture" id=15]
[ext_resource path="res://assets/Player/Run/frame_1_delay-0.1s.png" type="Texture" id=16]
[ext_resource path="res://assets/Player/Run/frame_2_delay-0.1s.png" type="Texture" id=17]
[ext_resource path="res://assets/Player/Run/frame_3_delay-0.1s.png" type="Texture" id=18]
[ext_resource path="res://assets/Player/Run/frame_4_delay-0.1s.png" type="Texture" id=19]
[ext_resource path="res://assets/Player/Run/frame_5_delay-0.1s.png" type="Texture" id=20]
[ext_resource path="res://assets/Player/Run/frame_6_delay-0.1s.png" type="Texture" id=21]
[ext_resource path="res://assets/Player/Run/frame_7_delay-0.1s.png" type="Texture" id=22]
[ext_resource path="res://assets/Player/Jump/jump outline.png" type="Texture" id=23]
[ext_resource path="res://assets/Player/Ledge Grab/ledge_grab01.png" type="Texture" id=24]
[ext_resource path="res://assets/Player/Ledge Grab/ledge_grab02.png" type="Texture" id=25]
[ext_resource path="res://assets/Player/Ledge Grab/ledge_grab03.png" type="Texture" id=26]
[ext_resource path="res://assets/Player/Ledge Grab/ledge_grab04.png" type="Texture" id=27]
[ext_resource path="res://assets/Player/Ledge Grab/ledge_grab05.png" type="Texture" id=28]
[ext_resource path="res://assets/Player/Ledge Grab/ledge_grab06.png" type="Texture" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "Landing",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Walk",
"speed": 6.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 15 ) ],
"loop": true,
"name": "Run",
"speed": 14.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": false,
"name": "LedgeGrab",
"speed": 10.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=2]

[sub_resource type="CapsuleShape2D" id=3]
height = 10.9056

[sub_resource type="RayShape2D" id=4]
length = 18.2983

[node name="player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0730972, 0 )
frames = SubResource( 1 )
animation = "Idle"
frame = 9

[node name="CheckFloor" type="RayCast2D" parent="."]
position = Vector2( -1, 17.3 )
scale = Vector2( 0.25, 1 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="CheckFloor2" type="RayCast2D" parent="."]
position = Vector2( 1, 17.3 )
scale = Vector2( 0.25, 1 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="LedgeCast" type="RayCast2D" parent="."]
position = Vector2( 9.417, -12 )
scale = Vector2( 0.25, 1 )
enabled = true
cast_to = Vector2( 0, 2.5 )

[node name="LedgeCastNot" type="RayCast2D" parent="."]
position = Vector2( 4, -12 )
scale = Vector2( 1, 0.25 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="TorchPos" type="Position2D" parent="."]
position = Vector2( 10, -6 )

[node name="TorchCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 8.6815, -6 )
rotation = 3.5308
scale = Vector2( 0.201272, 1.23966 )
shape = SubResource( 2 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
rotation = -3.14159
scale = Vector2( 0.5, 1 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1.19209e-07 )
scale = Vector2( 0.5, 1 )
shape = SubResource( 4 )
one_way_collision = true

[node name="DarknessKill" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Respawn" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Postfall" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="DarknessKill" to="." method="_on_DarknessKill_timeout"]
[connection signal="timeout" from="Respawn" to="." method="_on_Respawn_timeout"]
